[gd_scene load_steps=6 format=3 uid="uid://xkllxymbfbm6"]

[ext_resource type="Texture2D" uid="uid://vtf7yfl2710m" path="res://Assets/UI/panel-border-030.png" id="1_1lxbj"]
[ext_resource type="Script" uid="uid://cvxanw2w26j4i" path="res://Scripts/Components/slide_player.gd" id="1_biuxw"]
[ext_resource type="Theme" uid="uid://cpqqj8uayl3pq" path="res://Themes/Label.tres" id="2_biuxw"]
[ext_resource type="Resource" uid="uid://bblelrbpbyobr" path="res://Resources/SlideShows/StartingRoom.tres" id="2_h607j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h607j"]
bg_color = Color(0, 0, 0, 1)

[node name="SlidePlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_biuxw")
slideshow = ExtResource("2_h607j")

[node name="slideContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -140.0
offset_right = 306.5
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h607j")

[node name="NinePatchRect" type="NinePatchRect" parent="slideContainer"]
layout_mode = 2
texture = ExtResource("1_1lxbj")
region_rect = Rect2(0, 0, 96, 96)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="slideContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="slideContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_biuxw")
theme_override_constants/separation = 10

[node name="lblTitle" type="Label" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back  down  you  go..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="pic" type="TextureRect" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(570, 110)
layout_mode = 2
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(570, 110)
layout_mode = 2
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="MarginContainer" type="MarginContainer" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="txtMain" type="RichTextLabel" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/ColorRect/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnBack" type="Button" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "<<  Back"

[node name="MarginContainer" type="MarginContainer" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnClose" type="Button" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
text = "Close"

[node name="MarginContainer3" type="MarginContainer" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnNext" type="Button" parent="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next  >>"

[connection signal="pressed" from="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/btnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/btnClose" to="." method="_on_btn_close_pressed"]
[connection signal="pressed" from="slideContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/btnNext" to="." method="_on_btn_next_pressed"]
